--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pyth-min"
 version = "0.1.1"
 description = "Minimal sdk for interacting with Pyth pull oracles on Solana"
-readme = "../README.MD"
+readme = "README.MD"
 authors = ["Mithriac Labs <contact@psyoptions.io>"]
 repository = "https://github.com/mithraiclabs/pyth-min"
 license = "Apache-2.0"
